Routes Changelog
========================

-- 1.9 (**tip**)
* WARNING: Calling url_for with a set of args that returns None now throws an
  exception. Code that previously checked to see if a url could be made must
  be updated accordingly.
* Updated url_for to return url in a literal for use in templating that may
  try to escape it again.
* Added option to use X_FORWARDED_PROTO for proxying behind https to work
  easier.
* Fixed map.resource to be less restrictive on id than just spaces.
* Fixed Mapper.create_regs not being thread safe, particularly when
  always_scan=True.

-- 1.8 (March 28, 2008)
* Fixed bug of map.resource not allowing spaces in id.
* Fixed url generation to properly handle unicode defaults in addition to
  unicode arguments.
* Fixed url_for to handle lists as keyword args when generating query
  parameters.
* WARNING: Changed map.resource to not use ';', for actions, but the
  normal '/'. This means that formatted URL's will also now have the format
  come AFTER the action. Ie: /messsages/4.xml;rss -> /messages/4/rss.xml

-- 1.7.3 (May 28th, 2008)
* Fixed triple escaping bug, since WSGI servers are responsible for basic
  unescaping.

-- 1.7.2 (Feb. 27th, 2008)
* Fixed bug with keyword args not being coerced to raw string properly.

-- 1.7.1 (Nov. 16th, 2007)
* Fixed bug with sub-domains from route defaults getting encoded to unicode
  resulting in a unicode route which then caused url_for to throw an
  exception.
* Removed duplicate assignment in map.resource. Patch by Mike Naberezny.
* Applied test patch fix for path checking. Thanks Mike Naberezny.
* Added additional checking of remaining URL, to properly swallow periods in
  the appropriate context. Fixes #57.
* Added mapper.hardcode_names option which restricts url generation to the 
  named route during generation rather than using the routes default options
  during generation.
* Fixed the special '_method' attribute not being recognized during POST